force-app/main/default/objects/Technical_Contact__c/Technical_Contact__c.object-meta.xml
<CustomObject>
    <label>Teknik Kontak</label>
    <pluralLabel>Teknik Kontaklar</pluralLabel>
    <nameField>
        <label>Teknik Kontak No</label>
        <type>AutoNumber</type>
        <displayFormat>TC-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>WAT Mobilite internal technical team</description>
</CustomObject>