force-app/main/default/objects/Technical_Contact__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>E-posta</label>
    <type>Email</type>
    <required>true</required>
</CustomField>