force-app/main/default/objects/Technical_Contact__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>Ad</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>