force-app/main/default/objects/Technical_Contact__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>Mobil</label>
    <type>Phone</type>
</CustomField>