force-app/main/default/objects/Technical_Contact__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <label>İlgili Hesap</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Technical_Contacts</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>